--- a/libft/Makefile
+++ b/libft/Makefile
@@ -1,16 +1,14 @@
 # **************************************************************************** #
 #                                                                              #
 #                                                         :::      ::::::::    #
-#    makefile                                           :+:      :+:    :+:    #
+#    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
 #    By: todinh <todinh@student.42prague.com>       +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/10/18 20:10:14 by todinh            #+#    #+#              #
-#    Updated: 2023/10/18 20:52:44 by todinh           ###   ########.fr        #
+#    Updated: 2023/10/18 22:07:44 by todinh           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
-
-
 
 NAME = libft.a
 LIBH = libft.h
